--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/fried_catfish.html">Southern Fried Catfish</a>
+    <ul>
+      <li><a href="recipes/fried_catfish.html">Southern Fried Catfish</a></li>
+      <li><a href="recipes/green_beans.html">Green Beans</a></li>
+      <li><a href="recipes/sweet_tea.html">Sweet Tea</a></li>
+    </ul>
+
   </body>
 </html>
